rnsc/test_data/integration/error/parser/class_header/access_flags/synchronized.rns
.class synchronized HelloWorld
.super java/lang/Object
.class_end
